--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "test": "jest"
   },
   "dependencies": {
     "@prisma/client": "^2.28.0",
@@ -18,6 +19,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^26.0.24",
+    "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
@@ -28,8 +31,11 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^5.1.0",
+    "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "prisma": "^2.28.0",
+    "supertest": "^6.1.4",
+    "ts-jest": "^27.0.4",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
   }
